--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>es.upm.miw</groupId>
-    <artifactId>apaw-ecp2-TomasTeston</artifactId>
+    <artifactId>apaw.ecp2.TomasTeston</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
